wiring spark to polaris